--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,24 +10,22 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  test:
+    runs-on: ubuntu-latest 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [22.20.0,18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-    - name: Use Node.js ${{matrix.node-version}}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{matrix.node-version}}
-        cache: 'npm'
-    - name: Install dependencies
-      run: npm install
-    - name: Run Jest tests
-      run: npm test
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Use Node.js ${{matrix.node-version}}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{matrix.node-version}}
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm install
+      - name: Run Jest tests
+        run: npm test
